--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODA1NDgwOTEyNzI4NDkwMDM0.YBbgjg.6e_adQc2Yu1vCaO3mQ8VQaLysTQ",
-    "prefix": "+",
-    "botChannel": "813451831417765948"
+    "token": "VOTRE TOKEN",
+    "prefix": "VOTRE PREFIX",
+    "botChannel": "L'id du channel ou le bot sera activée"
 }
